# libmodem

./: .gitignore  .gitmodules  .sconsign.dblite  CMakeLists.txt  COMMON.MAK  COMMON.MAK~  Doxyfile.in  INSTRUCTIONS.txt  INSTRUCTIONS.txt~  MAKEFILE  README.md  SConstruct  Sconstruct  Sconstruct~  meson.build  meson_options.txt  msdos.cmake  settings.py
Modules/: FindPICTOR.cmake
Modules/Platform/: MSDOS.cmake  MSDOS.cmake~
Platform/: MSDOS.cmake  MSDOS.cmake~
SRC/: .XMODEM.C.marks  CMakeLists.txt  CONFIG.H  CONFIG.H~  FILES.H  MAKEFILE  MAKEFILE~  MODEM.H  SConscript  SConscript~  SERIAL.H  SERIAL.c  TIMEWRAP.H  TRXCOM.C  TRXCOM.C~  TRXCOM.c  USR_DEF.C  USR_DEF.H  USR_DEF.c  XMODEM.C  XMODEM.c  YMODEM.c  tags
SRC/DOS/: SERIAL.c  SERPRIM.c
SRC/GUI/: CMakeLists.txt  TRXDLG.RC  TRXWIN.MNU
SRC/GUI/backup/: TRXDLG.res  TRXMAS.RES  TRXWIN.res
SRC/WIN1632/: TRXWIN.C
SRC/WIN32/: SERIAL.c  SERPRIM.c
TARGETS/: SConscript  dos.py
TEST/: SConscript  SERIAL.c  ascii.txt  unittest.c
doc/: .gitignore  Doxyfile
scripts/: get-relpath.py  get_relpath.py  misoc-config.py
site_scons/: site_init.py
site_scons/site_tools/hdmi2usb-lm32/: __init__.py  hdmi2usb_lm32.py
src/: MODEM.H  SConscript  SERIAL.H  TRXCOM.c  modem.h  serial.c  serial.h  serprim.h  timewrap.h  xmodem.c  ymodem.c
src/hdmi2usb/: serprim.c
src/hdmi2usb-lm32/: serprim.c
src/win32/: serprim.c
targets/: SConscript  hdmi2usb-lm32.txt  hdmi2usb-or1k.txt
test/: SConscript  SERPRIM.c  serprim.c  shared.h  unittest.c
